# crate

./: .env.example  .gitignore  .opencode.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  GEMINI.md  Makefile  PERFORMANCE.md  README.md  docker-compose.dev.yaml  docker-compose.home.yaml  docker-compose.project.yaml  docker-compose.readplane.dev.yaml  docker-compose.test.yaml  docker-compose.yaml  install.sh  package-lock.json  package.json  pyrightconfig.json
.claude/skills/: python-backend.md  react-best-practices.md  react-view-transitions.md  web-design-guidelines.md
.github/workflows/: build-desktop.yml  build-images.yml  test-backend.yml  test-frontend.yml  test-native-tools.yml
app/: .coveragerc  Dockerfile  config.yaml  requirements-api.txt  requirements-worker-analysis.txt  requirements-worker-core.txt  requirements-worker.txt
app/crate/: __main__.py  acquisition_tasks.py  actors.py  alerting.py  analysis_daemon.py  analytics.py  artwork.py  audio.py  audio_analysis.py  audio_fingerprint.py  bliss.py  broker.py  config.py  content.py  crate_cli.py  discogs.py  docker_ctl.py  download_cache.py  duplicate_album.py  enricher.py  enrichment.py  fixer.py  (+50 more)
app/listen-desktop/src-tauri/: Cargo.toml  tauri.conf.json
app/listen-desktop/src-tauri/capabilities/: default.json
app/listen-desktop/src-tauri/icons/: icon.icns
app/listen-desktop/src-tauri/linux/: desktop-template.desktop
app/listen-desktop/src-tauri/src/: lib.rs  linux_desktop_integration.rs  linux_desktop_theme.rs  linux_media_controls.rs  macos_dock_menu.rs  macos_media_controls.rs  main.rs
scripts/: deploy-remote.sh  deploy.sh  eslint-fix.sh  regression_smoke.py
tools/crate-cli/: Cargo.toml
tools/crate-cli/src/: analyze.rs  bliss.rs  diff.rs  fingerprint.rs  lib.rs  main.rs  ml.rs  quality.rs  scan.rs  tags.rs
tools/crate-cli/tests/: analyze_tests.rs  bliss_tests.rs  scan_tests.rs
tools/crate-cli/tests/common/: mod.rs
(+1143 files in other folders)
