[package]
name = "crate-cli"
version = "0.3.0"
edition = "2021"
description = "Audio analysis and library management CLI for Crate"

[features]
default = ["analysis", "bliss", "ml"]
analysis = ["dep:realfft", "dep:symphonia"]
bliss = ["dep:bliss-audio"]
ml = ["analysis", "dep:ort"]

[dependencies]
bliss-audio = { version = "0.10", default-features = false, features = ["aubio-static", "symphonia-all", "library"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rayon = "1"
lofty = "0.22"
walkdir = "2"
md-5 = "0.10"
hex = "0.4"
symphonia = { version = "0.5", features = ["all"], optional = true }
realfft = { version = "3", optional = true }
ort = { version = "=2.0.0-rc.12", features = ["download-binaries"], optional = true }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
