[package]
name = "crate-desktop"
version = "0.1.0"
description = "Crate desktop app"
authors = ["Crate"]
edition = "2021"

[lib]
name = "crate_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["image-png", "tray-icon"] }
tauri-plugin-deep-link = "2"
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-window-state = "2"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSApplication", "NSMenu", "NSMenuItem", "NSResponder"] }
objc2-foundation = { version = "0.3.2", features = ["NSString"] }
